# quant-portal

./: .gitignore  Dockerfile  Makefile  README.md  config.py  pyproject.toml  ruff.toml
app/: __init__.py  auth.py  routes.py
app/static/css/: main.css
app/templates/: about.html  base.html  documentation.html  error.html  index.html  login.html  resources.html
tests/: test_cli.py
